tests/fail/130-fail-borrowed-non-u8-slice.rs
use df_derive::ToDataFrame;

#[path = "../common.rs"]
mod core;

#[derive(ToDataFrame)]
struct Bad<'a> {
    items: &'a [i32],
}

fn main() {}
